--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
+    "styled-components": "^4.3.2",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.2",
     "unstated-x": "^0.1.1",
