--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
+    "react-datepicker": "^2.8.0",
     "react-dev-utils": "^9.0.2",
     "react-dom": "^16.9.0",
     "resolve": "1.12.0",
